Fixed css spacing issue and added condition in speciesDetail function to pull first english flavor text entry

--- a/css/layout.css
+++ b/css/layout.css
@@ -3,8 +3,8 @@
 }
 
 .container {
-  max-width: 90%;
-  margin: 0 auto 2rem;
+  width: 90%;
+  margin-bottom: 2rem;
 }
 
 .row {
